--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Issues?"
-name: "Gatsby Starter Portfolio Minimal"
-email: "mail@example.com"
-profileImage: "../../favicon.png"
+title: "Palaver"
+name: "Benjamin Weinberger"
+email: "admin@mllc.tech"
+profileImage: "../../pancakeProPhoto.jpeg"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-If you have any problems with this starter, create an issue in the <a href="https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>GitHub repository</Underlining></a>.
+I Love to connect and chop it up with most anyone, and I can't wait to meet you!
