--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,9 +1,9 @@
 ---
 greetings: "Hello"
 icon: "waving-hand.png"
-title: "I'm a Gatsby Starter"
-subtitlePrefix: "I create awesome "
-subtitle: "one-page portfolios"
+title: "I'm Benjamin"
+subtitlePrefix: "I create awesome tech solutions via "
+subtitle: "software engineering"
 ---
 
-A modern portfolio with a minimalistic design.
+This page is meant to impress you by being minimalistic yet kinda fancy still, is it working?
