Removed unecessary cypress test, updated some configs

--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -7,4 +7,4 @@ profileImage: "../../pancakeProPhoto.jpeg"
 
 import Underlining from "../../../src/styles/underlining"
 
-I Love to connect and chop it up with most anyone, and I can't wait to meet you!
+Let's chop it up!
