massive content updates, changed branding to be company specific, updated/edited photos for projects section/all content for projects section. First draft live.

--- a/content/index/about/about.mdx
+++ b/content/index/about/about.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Mitote Tech - a BJW company"
+title: "mitote tech - about us"
 image: "./charles-deluvio-DgoyKNgPiFQ-unsplash.jpg"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-This would be where I write about myself and my personal/professional history.
+Mitote Tech is a software driven consulting firm based out of Tucson, AZ, USA that solves technical problems through clear communication & up front expectations.
 
-Photo by <a href="https://unsplash.com/@charlesdeluvio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link"><Underlining>Charles Deluvio</Underlining></a> on Unsplash
+If you landed in our little corner of the internet, there is a good chance you have a tech problem that needs solving. Thankfully you're in the right place.
+
+Please reach out in the contact section below to get in touch directly via email and one of our consultants will follow up with you within 24 hours!
