--- a/content/index/contact/contact.mdx
+++ b/content/index/contact/contact.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Palaver"
-name: "Benjamin Weinberger"
+title: "palaver"
+name: "Mitote Tech"
 email: "admin@mllc.tech"
 profileImage: "../../pancakeProPhoto.jpeg"
 ---
 
 import Underlining from "../../../src/styles/underlining"
 
-Let's chop it up!
+Let's chop it up! We are happy to communicate via Email, directly via Phone, over a video chat on Instagram Live, you name it, but to schedule that time please email initially using the address below:
