--- a/content/index/hero/hero.mdx
+++ b/content/index/hero/hero.mdx
@@ -1,7 +1,7 @@
 ---
 greetings: "Hello"
 icon: "waving-hand.png"
-title: "I'm Benjamin"
+title: "I'm Benjamin, Consultant @ Mitote Tech "
 subtitlePrefix: "I create awesome tech solutions via "
 subtitle: "software engineering"
 ---
