--- a/content/index/index.mdx
+++ b/content/index/index.mdx
@@ -1,5 +1,5 @@
 ---
-seoTitle: "Mitote Tech - Benjamin W"
+seoTitle: "Mitote Tech - Development Consulating"
 useSeoTitleSuffix: false
 useSplashScreen: false
 ---
