--- a/content/index/interests/interests.mdx
+++ b/content/index/interests/interests.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Interests/Passions"
+title: "what mitote tech brings to the table"
 ---
 
 export const shownItems = 5
@@ -9,31 +9,27 @@ export const interests = [
     icon: "./icons/joystick.png",
   },
   {
-    name: "Content via Markdown",
-    icon: "./icons/notebook.png",
-  },
-  {
-    name: "Responsive Design",
+    name: "Attention to Detail",
     icon: "./icons/nail-polish.png",
   },
   {
-    name: "Medium Integration",
-    icon: "./icons/medium.png",
-  },
-  {
-    name: "Animations",
-    icon: "./icons/gem-stone.png",
-  },
-  {
-    name: "PWA (Offline Support)",
+    name: "Direct Communication",
     icon: "./icons/mobile-phone.png",
   },
   {
-    name: "Modern Tech-Stack",
+    name: "Clear and Affordable Pricing",
+    icon: "./icons/gem-stone.png",
+  },
+  {
+    name: "Modern Tech-Stack Savvy",
     icon: "./icons/gatsby.png",
   },
   {
-    name: "Blazing Fast",
+    name: "Well Documented Code",
+    icon: "./icons/notebook.png",
+  },
+  {
+    name: "High Energy Problem Solving",
     icon: "./icons/high-voltage.png",
   },
 ]
