--- a/content/index/projects/content-integration/index.mdx
+++ b/content/index/projects/content-integration/index.mdx
@@ -1,15 +1,15 @@
 ---
-title: "No external CMS needed!"
-category: "Markdown Content"
+title: "Windows Application Solutions"
+category: "Quick and direct communication for Tech solutions"
 emoji: "📓"
-screenshot: "./mdx-example.png"
-github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
-external: "https://www.gatsbyjs.org/docs/mdx/writing-pages/"
+screenshot: "./popularlanguages.jpg"
+github: "https://github.com/BWeineff"
+external: "https://www.mllc.tech/#contact"
 tags:
-  - Markdown
-  - Fully Customizable
+  - Native Windows App Support
+  - Unique Solutions for Legacy Code Problems
 visible: true
 position: 2
 ---
 
-This starter uses MDX to integrate your content. MDX is basically a Markdown format that allows you to enrich your content with React components. This makes it fully customizable without external dependencies.
+We specialize in Legacy code and "we can't find anyone who works in **some obscure and outdated development pattern**". Yes is the answer, sometimes it's just a matter of finding the right time/person/business to get that answer.
