--- a/content/index/projects/extendable-layout/index.mdx
+++ b/content/index/projects/extendable-layout/index.mdx
@@ -1,15 +1,15 @@
 ---
-title: "Add more sections!"
-category: "Extendable Layout"
+title: "Real time tensorflow.js image identification, built out over the course of two hours as a spike"
+category: "ML5 - Example Demo Tech"
 emoji: "🧰"
-screenshot: "./kelly-sikkema-Hl3LUdyKRic-unsplash.jpg"
-github: "https://github.com/konstantinmuenster/gatsby-starter-portfolio-minimal"
-external: "https://unsplash.com/@kellysikkema"
+screenshot: "./ml5screenshot.png"
+github: "https://github.com/BWeineff/ml5videocapture"
+external: "https://bweineff.github.io/ml5VideoCapture/"
 tags:
-  - Custom Sections
-  - Easy-2-Use
+  - Neural Networks
+  - Easy-to-Demo
 visible: true
 position: 3
 ---
 
-The starter includes predefined sections as well as a template for new, custom sections. Moreover, you can add new projects to this section without additional coding. Photo by <a href="https://unsplash.com/@kellysikkema?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target="_blank" rel="nofollow noopener noreferrer" aria-label="External Link">Kelly Sikkema</a> on Unsplash.
+This is a quick spike website to demo how easy it is to use ML5 tensorflow.js and video playback recognition. The site is a blank shell that is mobile and desktop friendly, using the user's camera to pull a live feed and run it through an image library (mobilenet) to give an automatic classifier for image recognition (will not work with people/faces or with lots of background 'noise').
