--- a/content/index/projects/projects.mdx
+++ b/content/index/projects/projects.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Projects"
+title: "what we do, and projects we are working on"
 visible: true
 position: 0
 buttonVisible: true
-buttonText: "Visit Me on Github"
-buttonUrl: "https://github.com/BWeineff"
+buttonText: "Visit Us on LinkedIn"
+buttonUrl: "https://www.linkedin.com/company/mllc"
 ---
