--- a/content/index/projects/easy-setup/index.mdx
+++ b/content/index/projects/easy-setup/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: "WebApp Development Consulating"
+title: "WebApp Development Consulting"
 category: "From Basic Portfolios to Complex WebApps"
 emoji: "🕹️"
 screenshot: "./clement-h-95YRwf6CNw8-unsplash.jpg"
